crates/cyrs-plan/tests/snapshots/serde_pretty__json_aggregate.snap
---
source: crates/cyrs-plan/tests/serde_pretty.rs
expression: "serde_json::to_value(&plan).unwrap()"
---
{
  "ops": [
    {
      "bind": 0,
      "op": "source"
    },
    {
      "aggs": [
        {
          "args": [
            {
              "id": 0,
              "kind": "var"
            }
          ],
          "distinct": false,
          "func": "count"
        }
      ],
      "input": 0,
      "keys": [
        {
          "id": 0,
          "kind": "var"
        }
      ],
      "op": "aggregate"
    }
  ],
  "var_map": [],
  "write_ops": []
}
