crates/cyrs-plan/tests/snapshots/serde_pretty__json_expand.snap
---
source: crates/cyrs-plan/tests/serde_pretty.rs
expression: "serde_json::to_value(&plan).unwrap()"
---
{
  "ops": [
    {
      "bind": 0,
      "label": [
        "Person"
      ],
      "op": "source"
    },
    {
      "bind_rel": 1,
      "bind_to": 2,
      "from": 0,
      "input": 0,
      "op": "expand",
      "rel": {
        "direction": "outgoing",
        "length": {
          "kind": "single"
        },
        "types": [
          "KNOWS"
        ]
      },
      "to": {
        "labels": [
          "Person"
        ]
      }
    }
  ],
  "var_map": [],
  "write_ops": []
}
