crates/cyrs-plan/tests/snapshots/serde_pretty__json_write_create_node.snap
---
source: crates/cyrs-plan/tests/serde_pretty.rs
expression: "serde_json::to_value(&plan).unwrap()"
---
{
  "ops": [],
  "params": [],
  "var_map": [],
  "write_ops": [
    {
      "bind": 0,
      "labels": [
        "Person"
      ],
      "op": "create_node",
      "props": {
        "entries": [
          [
            "name",
            {
              "kind": "str",
              "value": "Alice"
            }
          ]
        ],
        "kind": "map"
      }
    }
  ]
}
